compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case_clause_guards__not_two.snap
---
source: compiler-core/src/fsharp/tests/case_clause_guards.rs
expression: "pub fn go(x, y) {\n  case x {\n    _ if !y && !x -> 0\n    _ -> 1\n  }\n}\n"
---
module rec my.``mod``

let go (x: bool) (y: bool) = begin
    match x with
    | _ when not y && not x ->
        0L
    | _ ->
        1L
end
