compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case_clause_guards__referencing_pattern_var.snap
---
source: compiler-core/src/fsharp/tests/case_clause_guards.rs
expression: "pub fn go(xs) {\n  case xs {\n    #(x) if x -> 1\n    _ -> 0\n  }\n}\n"
---
module rec my.``mod``
let go (xs: (bool)) = begin
    match xs with
    | (x) when x ->
        1
    | _ ->
        0
end
