compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__case_clause_guards__tuple_index.snap
---
source: compiler-core/src/fsharp/tests/case_clause_guards.rs
expression: "pub fn go(x, xs: #(Bool, Bool, Bool)) {\n  case x {\n    _ if xs.2 -> 1\n    _ -> 0\n  }\n}\n"
---
module rec my.``mod``

let go<'a> (x: 'a) (xs: (bool * bool * bool)) = begin
    match x with
    | _ when xs.Item3 ->
        1L
    | _ ->
        0L
end
